desenvolvendo o teste da camada eventController e o controller